--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,59 +1,10 @@
 @font-face {
-    font-family: 'Comic Sans MS';
-    src: url('ComicSansMS-BoldItalic.woff2') format('woff2'),
-        url('ComicSansMS-BoldItalic.woff') format('woff'),
-        url('ComicSansMS-BoldItalic.svg#ComicSansMS-BoldItalic') format('svg');
-    font-weight: bold;
-    font-style: italic;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Comic Sans MS';
-    src: url('ComicSansMS.woff2') format('woff2'),
-        url('ComicSansMS.woff') format('woff'),
-        url('ComicSansMS.svg#ComicSansMS') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Comic Sans MS';
-    src: url('ComicSansMS-Bold.woff2') format('woff2'),
-        url('ComicSansMS-Bold.woff') format('woff'),
-        url('ComicSansMS-Bold.svg#ComicSansMS-Bold') format('svg');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Comic Sans MS';
-    src: url('ComicSansMS-Italic.woff2') format('woff2'),
-        url('ComicSansMS-Italic.woff') format('woff'),
-        url('ComicSansMS-Italic.svg#ComicSansMS-Italic') format('svg');
-    font-weight: normal;
-    font-style: italic;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Comic Sans MS';
-    src: url('ComicSansMS.woff2') format('woff2'),
-        url('ComicSansMS.woff') format('woff'),
-        url('ComicSansMS.svg#ComicSansMS') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Comic Sans MS';
-    src: url('ComicSansMS.woff2') format('woff2'),
-        url('ComicSansMS.woff') format('woff'),
-        url('ComicSansMS.svg#ComicSansMS') format('svg');
-    font-weight: normal;
+    font-family: 'CuneiFont';
+    src: url('CuneiFont-Light.woff2') format('woff2'),
+        url('CuneiFont-Light.woff') format('woff'),
+        url('CuneiFont-Light.ttf') format('truetype'),
+        url('CuneiFont-Light.svg#CuneiFont-Light') format('svg');
+    font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
